fmh_back44 some string format changes, MailException to AppAdvice was added